# TradingSuite

./: .gitignore  .travis.yml  CMakeLists.txt  FinancialMarket.h  Instrument.h  README.md  appveyor.yml  travis-protobuf.sh
FinancialMarket/: CMakeLists.txt
FinancialMarket/Communication/: CMakeLists.txt
FinancialMarket/Communication/ProtobufMessages/: Referential.proto
FinancialMarket/Core/: CMakeLists.txt
FinancialMarket/Core/headers/: EpochTimestamp.hxx  FinancialMarket.hxx  GenericInstrument.h  InstrumentFactory.h  MatchingEngine.hxx  OrderTraits.h  Way.h
FinancialMarket/Core/src/: Way.cpp
FinancialMarket/Protobuf/: CMakeLists.txt
FinancialMarket/Protobuf/headers/: ReferentialSerialization.h  ReferentialSerialization.hxx
FinancialMarket/Protobuf/messages/: Referential.proto
FinancialMarket/Server/: CMakeLists.txt
FinancialMarket/Server/headers/: FinancialMarket.h  FinancialMarket.hxx  OrderBook.h  OrderBook.hxx  Referential.h  ReferentialServer.h
FinancialMarket/Server/src/: ReferentialServer.cpp  main.cpp
FinancialMarket/UnitTests/: CMakeLists.txt  GoogleTestNotes.txt
FinancialMarket/UnitTests/headers/: OrderBookTest.h  ReferentialSerializationTest.h  ReferentialTest.h
FinancialMarket/UnitTests/src/: OrderBookTest.cpp  ReferentialSerializationTest.cpp  ReferentialTest.cpp
headers/: FinancialMarket.h  FinancialMarket.hxx  Instrument.h  InstrumentTraits.h  MatchingEngine.h  MatchingEngine.hxx  Order.h  OrderBook.h  OrderBook.hxx  OrderFactory.h  OrderTraits.h  Referential.cpp  Referential.h  Referential.hxx  StockInstrument.h  Way.h
projects/: TradingSimulator.sln  TradingSimulator.vcxproj  TradingSimulator.vcxproj.filters
projects/cmake/: CMakeLists.txt
protobuf/: Generate.sh  VisualStudioNotes.txt
src/: FinancialMarket.cpp  MatchingEngine.cpp  main.cpp
